Completed explanation document and corrected a regression making horizontal scrollbar in mobile (<600px) width

--- a/weeks2-3/stepD/style-base.css
+++ b/weeks2-3/stepD/style-base.css
@@ -3,7 +3,7 @@ html, body { margin: 0; padding: 0; background-color:black;}
 body { padding-bottom: 2em; text-align: center; }
 
 #container, #header {
-  width: 100%;
+  width: 90%;
   text-align: left;
   margin: 0 auto;
 }
